rendering working, needs style fixes.

--- a/blank-album/view.html
+++ b/blank-album/view.html
@@ -104,9 +104,12 @@
 		<!-- Second Row: -->
 		<div class="md:flex-row-reverse">
 			<!-- Song List -->
-			<div id="children" class="flex-grow-1 columns-3">
+
+			<div class="flex-grow-1">
+			<div id="container-all" class="container-lg flex-grow-0 container-all">
 					{{- .View "children" -}}
 			</div>
+
 
 			<div class="md:width-32 flex-shrink-0 flex-grow-0"></div>
 			<div class="md:width-128 flex-shrink-0">
