--- a/blank-album/view.html
+++ b/blank-album/view.html
@@ -11,28 +11,35 @@
 		{{- $isPlayable = true -}}
 	{{- end -}}
 {{- end -}}
+      <output id="output">
+          <p class=".text-info"> -- </p>
+      </output>
 
 <div class="page padding-none">
 
 	<link rel="stylesheet" type="text/css" href="/{{.StreamID}}/stylesheet?v={{.ETag}}"/>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="{{.Label}}">
 	<meta property="og:url" content="{{.Permalink}}">
 	<meta property="og:image" content="{{.IconURL}}">
 	<meta property="og:description" content="{{.Summary}}">
 	<meta property="og:site_name" content="{{.DomainLabel}}">
-	<meta property="music:musician" content="{{.AttributedTo.ProfileURL}}">
+	<meta property="creation:creator" content="{{.AttributedTo.ProfileURL}}">
 
-	<div class="clickable alert-red" hx-get="/{{.StreamID}}/publish" role="button">
-		{{icon "alert-fill"}}
-		This album HAS NOT BEEN published yet and won't be seen by others.
-		<span class="text-underline">Click here to publish it</span>
-	</div>
-	<div class="padding pos-relative">
+	{{- if not .IsPublished -}}
+		<div class="clickable alert-red" hx-get="/{{.StreamID}}/publish" role="button">
+			{{icon "alert-fill"}}
+			This album HAS NOT BEEN published yet and won't be seen by others.
+			<span class="text-underline">Click here to publish it</span>
+		</div>
+	{{- end -}}
+
+	<div class="padding	">
 
 		<!-- First Row: Album Name and Artwork -->
 		<div class="md:flex-row margin-bottom margin-top-lg">
-			<div class="md:width-128 flex-shrink-0 pos-relative">
+			<div class="md:width-128 flex-shrink-0">
 				{{- if ne "" .IconURL -}}
 					<img src="{{.IconURL}}" class="width-100% aspect-square" aria-hidden="true" style="object-fit:cover;">
 				{{- else if $canEdit -}}
@@ -46,31 +53,23 @@
 					</div>
 				{{- end -}}
 
-					{{- if ne .Summary "" -}}
-						<article class="margin-bottom">
-							{{.Summary}}
-						</article>
-					{{- end -}}
+				{{- if ne "" .Summary -}}
+					<article class="margin-bottom-lg">
+						<h3>Album Notes</h3>
+						{{.Summary | markdown}}
+					</article>
+				{{- end -}}
 			</div>
-			<div class="md:width-32"></div>
 
+			<div class="md:width-32"></div>
 			<div class="flex-grow-1">
 				<h1 class="margin-top-none">{{.Label}}</h1>
-
 				<div class="text-sm margin-top-none">
-					<a hx-get="/@{{.ParentID}}" href="/@{{.ParentID}}" class="turboclick" aria-label="Artist: {{.AttributedTo.Name}}">
-						{{.AttributedTo.Name}}
-					</a>
 					<div class="pos-absolute-top-left text-sm">
-						<button hx-get="/{{.StreamID}}/intent?intent=create&content={{.Label}} {{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "share"}}</span> Share</button>
-						<button hx-get="/{{.StreamID}}/intent?intent=like&object={{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "thumbs-up"}}</span> Like</button>
-						<button hx-get="/{{.StreamID}}/intent" aria-label="Manage Accounts">{{icon "more-horizontal"}}</button>
+						<a hx-get="/@{{.ParentID}}" href="/@{{.ParentID}}" class="turboclick" aria-label="Artist: {{.AttributedTo.Name}}">
+							{{.AttributedTo.Name}}
+						</a>
 					</div>
-					{{- range $index, $tag := $tags -}}
-						{{- if eq "Hashtag" $tag.Type}}
-							<a xhref="/albums?q=%23{{$tag.Name}}" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
-						{{- end -}}
-					{{- end -}}
 				</div>
 
 				<div class="margin-vertical"></div>
@@ -103,110 +102,81 @@
 
 		<!-- Second Row: -->
 		<div class="md:flex-row-reverse">
-			<!-- Song List -->
+			<!-- Image Cards -->
 
-			<div class="flex-grow-1">
-			<div id="container-all" class="container-lg flex-grow-0 container-all">
-					{{- .View "children" -}}
+			<div id="container-all" class="container-all">
+				{{- .View "children" -}}
 			</div>
 
-
-			<div class="md:width-32 flex-shrink-0 flex-grow-0"></div>
-			<div class="md:width-128 flex-shrink-0">
-
-				{{- if ne "" .Summary -}}
-					<div class="margin-bottom-lg">
-						<h3>Album Notes</h3>
-						{{.Summary | markdown}}
-					</div>
+			<div class="md:width-8 flex-shrink-1 flex-grow-0"></div>
+			<div class="md:width-128 flex-shrink-1">
+			<div class="text-sm">
+				{{- range $index, $tag := $tags -}}
+					{{- if eq "Hashtag" $tag.Type}}
+						<a xhref="/albums?q=%23{{$tag.Name}}" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
+					{{- end -}}
 				{{- end -}}
+			</div>
 
-				{{- if $links.NotEmpty -}}
-					<div class="margin-bottom-lg">
-						<h3>Source Links</h3>
-						{{- range $key, $value := $links -}}
+			{{- if $links.NotEmpty -}}
+				<div class="margin-bottom-lg">
+					<h3>Source Links</h3>
+					{{- range $key, $value := $links -}}
 
-							{{- if ne "" $value -}}
-								{{- $icon := "music-note-beamed" -}}
-								{{- $label := $value -}}
+						{{- if ne "" $value -}}
+							{{- $icon := "music-note-beamed" -}}
+							{{- $label := $value -}}
 
-								{{- if eq "AMAZON" $key -}}
-									{{- $label = "Amazon Music" -}}
-									{{- $icon = "amazon" -}}
+							{{- if eq "AMAZON" $key -}}
+								{{- $label = "Amazon Music" -}}
+								{{- $icon = "amazon" -}}
 
-								{{- else if eq "APPLE" $key -}}
-									{{- $icon = "apple" -}}
-									{{- $label = "Apple Music" -}}
+							{{- else if eq "APPLE" $key -}}
+								{{- $icon = "apple" -}}
+								{{- $label = "Apple Music" -}}
 
-								{{- else if eq "BANDCAMP" $key -}}
-									{{- $label = "Bandcamp" -}}
+							{{- else if eq "BANDCAMP" $key -}}
+								{{- $label = "Bandcamp" -}}
 
-								{{- else if eq "GOOGLE" $key -}}
-									{{- $label = "Google Play" -}}
-									{{- $icon = "google" -}}
+							{{- else if eq "GOOGLE" $key -}}
+								{{- $label = "Google Play" -}}
+								{{- $icon = "google" -}}
 
-								{{- else if eq "IHEARTRADIO" $key -}}
-									{{- $label = "iHeartRadio" -}}
+							{{- else if eq "IHEARTRADIO" $key -}}
+								{{- $label = "iHeartRadio" -}}
 
-								{{- else if eq "PANDORA" $key -}}
-									{{- $label = "Pandora" -}}
+							{{- else if eq "PANDORA" $key -}}
+								{{- $label = "Pandora" -}}
 
-								{{- else if eq "SOUNDCLOUD" $key -}}
-									{{- $label = "SoundCloud" -}}
-									{{- $icon = "cloud" -}}
+							{{- else if eq "SOUNDCLOUD" $key -}}
+								{{- $label = "SoundCloud" -}}
+								{{- $icon = "cloud" -}}
 
-								{{- else if eq "SPOTIFY" $key -}}
-									{{- $label = "Spotify" -}}
-									{{- $icon = "spotify" -}}
+							{{- else if eq "SPOTIFY" $key -}}
+								{{- $label = "Spotify" -}}
+								{{- $icon = "spotify" -}}
 
-								{{- else if eq "TIDAL" $key -}}
-									{{- $label = "Tidal" -}}
+							{{- else if eq "TIDAL" $key -}}
+								{{- $label = "Tidal" -}}
 
-								{{- else if eq "YOUTUBE" $key -}}
-									{{- $label = "YouTube Music" -}}
-									{{- $icon = "youtube" -}}
+							{{- else if eq "YOUTUBE" $key -}}
+								{{- $label = "YouTube Music" -}}
+								{{- $icon = "youtube" -}}
 
-								{{- else -}}
-									{{- $label = domainOnly $value -}}
+							{{- else -}}
+								{{- $label = domainOnly $value -}}
 
-								{{- end -}}
-
-								<a href="{{$value}}" class="block ellipsis" target="_blank">
-									<i class="bi bi-{{$icon}}"></i> {{ $label }}
-								</a>
 							{{- end -}}
 
+							<a href="{{$value}}" class="block ellipsis" target="_blank">
+								<i class="bi bi-{{$icon}}"></i> {{ $label }}
+							</a>
 						{{- end -}}
-						</div>
-				{{- end -}}
 
-		{{- if $songs.NotEmpty -}}
-			{{- if $canEdit -}}
-
-				<script src="/.themes/global/resources/sortable-1.15.0/Sortable.min.js" preload></script>
-
-				<script>
-					new Sortable(document.getElementById("track-list"), {
-						handle: ".drag-handle",
-						animation: 150,
-						whisperClass: 'draggable-whisper'
-					});
-				</script>
-
-				<style>
-					.drag-handle {
-						cursor:grab;
-					}
-
-					.draggable-whisper {
-						background-color: var(--gray50);
-						color:var(--gray50);
-						cursor: grabbing;
-					}
-				</style>
+					{{- end -}}
+					</div>
 			{{- end -}}
-
-		{{- end -}}
+</div>
 
 		<div class="pos-absolute-top-right text-sm">
 			{{- if $canEdit -}}
@@ -231,4 +201,12 @@
 	</div>
 
 	<div hx-get="/{{.StreamID}}" hx-trigger="refreshPage from:window" hx-push-url="false"></div>
+
+
+	<div class="pos-absolute-bottom-left text-sm">
+		<button hx-get="/{{.StreamID}}/intent?intent=create&content={{.Label}} {{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "share"}}</span> Share</button>
+		<button hx-get="/{{.StreamID}}/intent?intent=like&object={{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "thumbs-up"}}</span> Like</button>
+		<button hx-get="/{{.StreamID}}/intent" aria-label="Manage Accounts">{{icon "more-horizontal"}}</button>
+	</div>
+</div>
 </div>
