fix image sizings

--- a/blank-album/children.html
+++ b/blank-album/children.html
@@ -5,5 +5,5 @@
 
         <script src="/.templates/blank-album/javascript"  type="text/javascript" ></script>
             <span id="content">No creations found. <br/>
-                <button onclick="renderExhibit()" hx-target="body" hx-swap="outerHTML">Link Discord ID</button>
+                <button onclick="linkDiscord()" hx-target="body" hx-swap="outerHTML">Link Discord ID</button>
             </span>
