--- a/blank-album/view.html
+++ b/blank-album/view.html
@@ -11,9 +11,12 @@
 		{{- $isPlayable = true -}}
 	{{- end -}}
 {{- end -}}
+
+	<div class="padding	pos-absolute-top-left margin-top-lg">
       <output id="output">
-          <p class=".text-info"> -- </p>
+          <p class=".text-info"> DEBUG AREA: Stay calm! This area exists on purpose! -- </p>
       </output>
+	</div>
 
 <div class="page padding-none">
 
@@ -39,7 +42,7 @@
 
 		<!-- First Row: Album Name and Artwork -->
 		<div class="md:flex-row margin-bottom margin-top-lg">
-			<div class="md:width-128 flex-shrink-0">
+			<div class="md:width-1-6 flex-shrink-0">
 				{{- if ne "" .IconURL -}}
 					<img src="{{.IconURL}}" class="width-100% aspect-square" aria-hidden="true" style="object-fit:cover;">
 				{{- else if $canEdit -}}
@@ -61,8 +64,8 @@
 				{{- end -}}
 			</div>
 
-			<div class="md:width-32"></div>
-			<div class="flex-grow-1">
+			<div class="md:width-8"></div>
+			<div class="flex-grow-0">
 				<h1 class="margin-top-none">{{.Label}}</h1>
 				<div class="text-sm margin-top-none">
 					<div class="pos-absolute-top-left text-sm">
