--- a/blank-album/children.html
+++ b/blank-album/children.html
@@ -1,9 +1,40 @@
-{{- $results := .Children.Top6.Slice -}}
+{{- $results := .Children.Top60.Slice -}}
 {{- $canEdit := .UserCan "edit" -}}
 {{- $isowner := .IsOwner -}}
+{{- if not $results.IsEmpty -}}
 
+<!--        <script src="/.templates/blank-album/javascript"  type="text/javascript" ></script>-->
+<!--            <span id="content">No creations found. <br/>-->
+<!--                <button onclick="linkDiscord()" hx-target="body" hx-swap="outerHTML">Link Discord ID</button>-->
+<!--            </span>-->
 
-        <script src="/.templates/blank-album/javascript"  type="text/javascript" ></script>
-            <span id="content">No creations found. <br/>
-                <button onclick="linkDiscord()" hx-target="body" hx-swap="outerHTML">Link Discord ID</button>
-            </span>
+	{{- range $index, $result := $results -}}
+		<div class="container">
+			<a href={{$result.Data.links}}>
+				<img src={{$result.Data.imageURL}} alt="">
+				<span class="title"> {{$result.Label}} </span>
+				<span class="text">
+					Favorites: {{$result.Data.favs}}<br/>
+					Date Created: {{$result.Data.dateCreated}}<br/>
+					Tags: {{$result.Data.tags}}<br/>
+					Category: {{$result.Data.category}}<br/>
+				</span>
+			</a>
+			<button hx-get='/modals/deleteLink.html'
+					hx-trigger='confirmed'
+					onClick="confirmRemoval({{$result.StreamID}})" class="remove" aria-label="remove">
+			</button>
+		</div>
+<!--		<div streamId="{{.StreamID}}" class="item">-->
+<!--			<div-->
+<!--				hx-get="/{{.Token}}"-->
+<!--				hx-push-url="true"-->
+<!--				class="clickable card"-->
+<!--				style="overflow:hidden; aspect-ratio:1;">-->
+<!--				<img src="{{.ImageURL}}?height=300&amp;width=300" class="width-100%">-->
+<!--			</div>-->
+<!--		</div>-->
+
+	{{- end -}}
+
+{{- end -}}
