(incremental) bump to new version.

--- a/blank-album/stylesheet.html
+++ b/blank-album/stylesheet.html
@@ -96,7 +96,7 @@ body {
 	display: initial;
 }
 
-.track.PLAYING {
+.work.PLAYING {
 	background-color: var(--gray20);
 }
 
@@ -328,3 +328,4 @@ h1{
 	0% {transform: scale(1);}
 	100% {transform: scale(0.9);}
 }
+{{$artist.Data "stylesheet"}}
