--- a/blank-creation/oembed.html
+++ b/blank-creation/oembed.html
@@ -54,7 +54,7 @@ user-select:none;
 -webkit-user-select: none;
 white-space:nowrap;
 background-color: {{$buttonColor}};
-color: {{$buttonColor.Text}};">&#9658; Play on Bandwagon</a>
+color: {{$buttonColor.Text}};">&#9658; Play on BlankPage</a>
                     </div>
                     
                     {{- if ne "" .Summary -}}
