--- a/blank-album/view.html
+++ b/blank-album/view.html
@@ -1,28 +1,21 @@
 {{- $streamID := .StreamID -}}
 {{- $tags := .Tags -}}
-{{- $songs := .Children.Top60.Slice -}}
+{{- $creations := .Children.Top60.Slice -}}
 {{- $canEdit := .UserCan "edit" -}}
 {{- $isPlayable := false -}}
-{{- $isowner := .IsOwner -}}
 {{- $links := .Data "links" -}}
-
-{{- range $index, $song := $songs -}}
-	{{- if ne nil $song.Data.imageURL -}}
+{{- range $index, $creation := $creations -}}
+	{{- if ne nil $creation.Data.imageURL -}}
 		{{- $isPlayable = true -}}
 	{{- end -}}
 {{- end -}}
+{{- $checkoutLabel := first (.Data "checkout label") "Buy Now" -}}
 
-	<div class="padding	pos-absolute-top-left margin-top-lg">
-      <output id="output">
-          <p class=".text-info"> DEBUG AREA: Stay calm! This area exists on purpose! -- </p>
-      </output>
-	</div>
+<div id="album-{{.StreamID}}"  class="page padding-none">
 
-<div class="page padding-none">
+	<link rel="stylesheet" type="text/css" href="/{{.StreamID}}/stylesheet?v={{.ETag}}"/>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<link rel="stylesheet" type="text/css" href="/{{.StreamID}}/stylesheet?v={{.ETag}}"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:title" content="{{.Label}}">
 	<meta property="og:url" content="{{.Permalink}}">
 	<meta property="og:image" content="{{.IconURL}}">
@@ -30,15 +23,44 @@
 	<meta property="og:site_name" content="{{.DomainLabel}}">
 	<meta property="creation:creator" content="{{.AttributedTo.ProfileURL}}">
 
+	<div class="padding	pos-absolute-top-left margin-top-lg">
+	  <output id="output">
+		  <p class=".text-info"> DEBUG AREA: Stay calm! This area exists on purpose! -- </p>
+	  </output>
+	</div>
+
 	{{- if not .IsPublished -}}
-		<div class="clickable alert-red" hx-get="/{{.StreamID}}/publish" role="button">
-			{{icon "alert-fill"}}
-			This album HAS NOT BEEN published yet and won't be seen by others.
-			<span class="text-underline">Click here to publish it</span>
+		{{- if $creations.NotEmpty -}}
+		<div class="clickable alert-green margin-none" hx-get="/{{.StreamID}}/publish" role="button" style="border-radius:0px;">
+			{{icon "check-circle"}}
+
+			This album IS READY TO PUBLISH on the social web.
+			<span class="text-underline">Click here to publish it now</span>
 		</div>
+		{{- end -}}
 	{{- end -}}
 
 	<div class="padding	">
+
+		{{- if $canEdit -}}
+			<div class="pos-absolute-top-right text-sm">
+
+				<button hx-get="/{{.StreamID}}/edit">Edit Album</button>
+				<button hx-get="/{{.StreamID}}/edit-checkout">
+					{{- if .StreamHasPrivileges -}}
+						{{icon "check"}} Sales Enabled
+					{{- else -}}
+						Sell Online
+					{{- end -}}
+				</button>
+				{{- if .IsPublished -}}
+					<button hx-get="/{{.StreamID}}/unpublish">{{icon "check"}} Published</button>
+				{{- else if $creations.NotEmpty -}}
+					<button hx-get="/{{.StreamID}}/publish" class="primary">Publish</button>
+				{{- end -}}
+
+			</div>
+		{{- end -}}
 
 		<!-- First Row: Album Name and Artwork -->
 		<div class="md:flex-row margin-bottom margin-top-lg">
@@ -64,6 +86,16 @@
 				{{- end -}}
 			</div>
 
+			{{- if .IsPublished -}}
+
+				<div class="margin-vertical"></div>
+				<div class="text-sm">
+					<button hx-get="/{{.StreamID}}/intent?intent=create&content={{.Label | queryEscape}} {{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "share"}}</span> Share</button>
+					<button hx-get="/{{.StreamID}}/intent?intent=like&object={{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "thumbs-up"}}</span> Like</button>
+					<button hx-get="/{{.StreamID}}/intent" aria-label="Manage Accounts">{{icon "more-horizontal"}}</button>
+				</div>
+			{{- end -}}
+
 			<div class="md:width-8"></div>
 			<div class="flex-grow-0">
 				<h1 class="margin-top-none">{{.Label}}</h1>
@@ -77,7 +109,7 @@
 
 				<div class="margin-vertical"></div>
 
-				{{- if and $songs.IsEmpty $canEdit -}}
+				{{- if $creations.NotEmpty -}}
 					<div class="margin-vertical-lg">
 						<button class="primary" hx-get="/{{.StreamID}}/add-creation"><td><span aria-hidden="true">{{icon "plus"}}</span> Add the first creation to this album</button>
 
@@ -97,7 +129,19 @@
 						{{- end -}}
 						</div>
 					</div>
+				{{- else if $canEdit -}}
 
+					<div class="table margin-vertical-lg">
+						<div hx-get="/{{.StreamID}}/add-creation" role="button" class="clickable flex-row">
+							<div class="margin-horizontal-xs flex-align-self-center link" style="font-size:50px" aria-hidden="true">{{icon "music"}}</div>
+							<div class="flex-grow">
+								<div class="text-lg bold link nowrap">
+									Add the first song to this album
+								</div>
+								<div class="text-sm text-gray">You'll need to add at least one song to this album before you can publish it.</div>
+							</div>
+						</div>
+					</div>
 				{{- end -}}
 
 			</div>
@@ -111,15 +155,18 @@
 				{{- .View "children" -}}
 			</div>
 
-			<div class="md:width-8 flex-shrink-1 flex-grow-0"></div>
-			<div class="md:width-128 flex-shrink-1">
-			<div class="text-sm">
-				{{- range $index, $tag := $tags -}}
-					{{- if eq "Hashtag" $tag.Type}}
-						<a xhref="/albums?q=%23{{$tag.Name}}" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
-					{{- end -}}
-				{{- end -}}
-			</div>
+			{{- if $tags.NotEmpty -}}
+				<div class="md:width-8 flex-shrink-1 flex-grow-0"></div>
+				<div class="md:width-128 flex-shrink-1">
+					<div class="text-sm">
+						{{- range $index, $tag := $tags -}}
+							{{- if eq "Hashtag" $tag.Type}}
+								<a xhref="/albums?q=%23{{$tag.Name}}" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
+							{{- end -}}
+						{{- end -}}
+					</div>
+				</div>
+			{{- end -}}
 
 			{{- if $links.NotEmpty -}}
 				<div class="margin-bottom-lg">
@@ -130,37 +177,9 @@
 							{{- $icon := "music-note-beamed" -}}
 							{{- $label := $value -}}
 
-							{{- if eq "AMAZON" $key -}}
-								{{- $label = "Amazon Music" -}}
-								{{- $icon = "amazon" -}}
-
-							{{- else if eq "APPLE" $key -}}
-								{{- $icon = "apple" -}}
-								{{- $label = "Apple Music" -}}
-
-							{{- else if eq "BANDCAMP" $key -}}
-								{{- $label = "Bandcamp" -}}
-
-							{{- else if eq "GOOGLE" $key -}}
-								{{- $label = "Google Play" -}}
-								{{- $icon = "google" -}}
-
-							{{- else if eq "IHEARTRADIO" $key -}}
-								{{- $label = "iHeartRadio" -}}
-
-							{{- else if eq "PANDORA" $key -}}
-								{{- $label = "Pandora" -}}
-
 							{{- else if eq "SOUNDCLOUD" $key -}}
 								{{- $label = "SoundCloud" -}}
 								{{- $icon = "cloud" -}}
-
-							{{- else if eq "SPOTIFY" $key -}}
-								{{- $label = "Spotify" -}}
-								{{- $icon = "spotify" -}}
-
-							{{- else if eq "TIDAL" $key -}}
-								{{- $label = "Tidal" -}}
 
 							{{- else if eq "YOUTUBE" $key -}}
 								{{- $label = "YouTube Music" -}}
@@ -179,47 +198,117 @@
 					{{- end -}}
 					</div>
 			{{- end -}}
-</div>
 
-		<div class="pos-absolute-top-right text-sm">
-			{{- if $canEdit -}}
-				<button hx-get="/{{.StreamID}}/edit">Edit Album</button>
+			{{- $uploads := .AttachmentsByCategory "other" -}}
+			{{- if or $uploads.NotEmpty $canEdit -}}
+				<div id="album-attachments" class="margin-bottom-lg">
+					<div class="flex-row">
+						<h3 class="flex-grow margin-none">Other Files</h3>
+					</div>
 
-				{{- if .IsPublished -}}
-					<button hx-get="/{{.StreamID}}/unpublish">Un-Publish</button>
-				{{- else -}}
-					<button hx-get="/{{.StreamID}}/publish" class="primary">Publish</button>
-				{{- end -}}
+					{{- if $canEdit -}}
+						<div class="margin-bottom-sm">
+							<div class="text-gray">Attachments like <b class="nowrap">liner notes</b> or <b class="nowrap">album art</b> that anyone can access.</div>
+							<span hx-get="/{{$streamID}}/upload" class="link" role="button" aria-label="Attach a File">{{icon "upload"}} Attach a File</span>
+						</div>
+					{{- end -}}
 
-				<button hx-get="/{{.StreamID}}/add-creation"><span aria-label="Add">{{icon "add"}}</span> Image Link</button>
+					{{- if $uploads.NotEmpty -}}
+						<div class="table margin-top-lg">
+							{{- range $index, $upload := $uploads -}}
+								<div class="flex-row padding-vertical-sm">
+									<div class="flex-grow">
+										<a href="/{{$streamID}}/attachments/{{.AttachmentID.Hex}}" target="_blank" class="ellipsis">{{.Label}}</a><br>
+										<span class="text-sm text-gray">{{.Description}}</span>
+									</div>
+									{{- if $canEdit -}}
+										<div>
+											<button hx-get="/{{$streamID}}/edit-upload?attachmentId={{.AttachmentID.Hex}}" title="Edit Attachment" aria-label="Edit Attachment" class="text-xs margin-left-sm">{{icon "more-horizontal"}}</button>
+										</div>
+									{{- end -}}
+								</div>
+							{{- end -}}
+						</div>
+					{{- end -}}
+				</div>
 			{{- end -}}
-			{{- if .UserCan "zip" -}}
-				<a class="button" href="/{{.StreamID}}/zip">Download</a>
-			{{- end -}}
+
 		</div>
 
+		{{- if $canEdit -}}
+		<div id="stream-refresh-{{.StreamID}}" hx-preserve>
 
-		<div hx-get="/{{.StreamID}}" hx-trigger="refreshPage from:window"></div>
+			<div
+				hx-get="/{{.StreamID}}"
+				hx-trigger="refreshPage from:window"
+				hx-push-url="false"
+				hx-target="#main"
+				hx-swap="innerHTML">
+			</div>
+
+			<div
+				hx-get="/{{.StreamID}}"
+				hx-trigger="creationAdded from:window delay:300ms"
+				hx-push-url="false"
+				hx-target="#main"
+				hx-swap="innerHTML">
+			</div>
+
+			<div
+				hx-get="/{{.StreamID}}"
+				hx-trigger="creationAdded from:window delay:600ms"
+				hx-push-url="false"
+				hx-target="#main"
+				hx-swap="innerHTML">
+			</div>
+
+			<div
+				hx-get="/{{.StreamID}}"
+				hx-trigger="creationAdded from:window delay:900ms"
+				hx-push-url="false"
+				hx-target="#main"
+				hx-swap="innerHTML">
+			</div>
+
+			<!--
+			<div
+				hx-get="/{{.StreamID}}"
+				hx-trigger="refreshPage from:window delay:1000ms"
+				hx-push-url="false"
+				hx-target="#main"
+				hx-swap="innerHTML">
+			</div>
+			-->
+
+			<!--
+			<div hx-ext="sse" sse-connect="/{{.StreamID}}/sse">
+				<div
+					hx-get="/{{.StreamID}}"
+					hx-target="main"
+					hx-swap="innerHTML"
+					hx-trigger="sse:{{.StreamID}}"
+					hx-push-url="false">
+				</div>
+			</div>
+			-->
+
+		</div>
+		{{- end -}}
+
+		<nav class="pos-absolute-bottom navbar navbar-expand-sm fixed-bottom">
+
+			<div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
+				<ul class="pagination pagination-sm" id="pagination">
+
+				</ul>
+			</div>
+			<div class="pos-absolute-bottom text-sm ">
+				<button hx-get="/{{.StreamID}}/intent?intent=create&content={{.Label}} {{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "share"}}</span> Share</button>
+				<button hx-get="/{{.StreamID}}/intent?intent=like&object={{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "thumbs-up"}}</span> Like</button>
+				<button hx-get="/{{.StreamID}}/intent" aria-label="Manage Accounts">{{icon "more-horizontal"}}</button>
+			</div>
+		</nav>
+
 
 	</div>
-
-	<div hx-get="/{{.StreamID}}" hx-trigger="refreshPage from:window" hx-push-url="false"></div>
-
-	<nav class="pos-absolute-bottom navbar navbar-expand-sm fixed-bottom">
-
-        <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-            <ul class="pagination pagination-sm" id="pagination">
-
-            </ul>
-		</div>
-		<div class="pos-absolute-bottom text-sm ">
-			<button hx-get="/{{.StreamID}}/intent?intent=create&content={{.Label}} {{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "share"}}</span> Share</button>
-			<button hx-get="/{{.StreamID}}/intent?intent=like&object={{.Permalink}}"><span aria-hidden="true" class="margin-left-xs">{{icon "thumbs-up"}}</span> Like</button>
-			<button hx-get="/{{.StreamID}}/intent" aria-label="Manage Accounts">{{icon "more-horizontal"}}</button>
-		</div>
-    </nav>
-
-
-</div>
-
 </div>
