--- a/blank-creation/view.html
+++ b/blank-creation/view.html
@@ -1,10 +1,16 @@
 {{- $album := .Parent "view" -}}
 {{- $links := .Data "links" -}}
 {{- $streamURL := .Data "streamURL" -}}
-{{- $description := .Data "description" -}}
+{{- $description := .Data "summary" -}}
+{{- $attachmentID := .Data "attachmentId" -}}
 {{- $imageURL := .Data "imageURL" -}}
+{{- $iconURL := .IconURL -}}
 
-<div class="page">
+{{- if eq "" $iconURL -}}
+	{{- $iconURL =  $album.IconURL -}}
+{{- end -}}
+
+<div id="creation-{{.StreamID}}" class="page padding-none">
 
 	<link rel="stylesheet" href="/{{.ParentID}}/stylesheet">
 	
@@ -71,88 +77,120 @@
 		<div class="md:width-32 flex-shrink-0 flex-grow-0"></div>
 		<div class="md:width-256 flex-shrink-0">
 
-			{{- if $links.NotEmpty -}}
 
-				<h3>Stream Online</h3>
-				{{- range $key, $value := $links -}}
-					
-					{{- if ne "" $value -}}
-						{{- $icon := "music-note-beamed" -}}
-						{{- $label := $value -}}
+				{{- if .Tags.NotEmpty -}}
+					<div id="song-tags" class="text-sm margin-bottom">
+						{{- range $index, $tag := .Tags -}}
+							{{- if eq "Hashtag" $tag.Type}}
+							<a href="/works?q=%23{{$tag.Name}}" hx-boost="true" class="tag margin-bottom-sm">#{{$tag.Name}}</a>
+							{{- end -}}
+						{{- end -}}
+					</div>
+				{{- end -}}
 
-						{{- if eq "AMAZON" $key -}}
-							{{- $label = "Amazon Music" -}}
-							{{- $icon = "amazon" -}}
+				{{- if $links.NotEmpty -}}
 
-						{{- else if eq "APPLE" $key -}}
-							{{- $icon = "apple" -}}
-							{{- $label = "Apple Music" -}}
+					<h3>Stream Online</h3>
+					{{- range $key, $value := $links -}}
 
-						{{- else if eq "BANDCAMP" $key -}}
-							{{- $label = "Bandcamp" -}}
+						{{- if ne "" $value -}}
+							{{- $icon := "music-note-beamed" -}}
+							{{- $label := $value -}}
 
-						{{- else if eq "GOOGLE" $key -}}
-							{{- $label = "Google Play" -}}
-							{{- $icon = "google" -}}
+							{{- if eq "AMAZON" $key -}}
+								{{- $label = "Amazon Music" -}}
+								{{- $icon = "amazon" -}}
 
-						{{- else if eq "IHEARTRADIO" $key -}}
-							{{- $label = "iHeartRadio" -}}
+							{{- else if eq "APPLE" $key -}}
+								{{- $icon = "apple" -}}
+								{{- $label = "Apple Music" -}}
 
-						{{- else if eq "PANDORA" $key -}}
-							{{- $label = "Pandora" -}}
+							{{- else if eq "BANDCAMP" $key -}}
+								{{- $label = "Bandcamp" -}}
 
-						{{- else if eq "SPOTIFY" $key -}}
-							{{- $label = "Spotify" -}}
-							{{- $icon = "spotify" -}}
+							{{- else if eq "GOOGLE" $key -}}
+								{{- $label = "Google Play" -}}
+								{{- $icon = "google" -}}
 
-						{{- else if eq "SOUNDCLOUD" $key -}}
-							{{- $label = "SoundCloud" -}}
-							{{- $icon = "cloud" -}}
+							{{- else if eq "IHEARTRADIO" $key -}}
+								{{- $label = "iHeartRadio" -}}
 
-						{{- else if eq "TIDAL" $key -}}
-							{{- $label = "Tidal" -}}
+							{{- else if eq "PANDORA" $key -}}
+								{{- $label = "Pandora" -}}
 
-						{{- else if eq "YOUTUBE" $key -}}
-							{{- $label = "YouTube Music" -}}
-							{{- $icon = "youtube" -}}
+							{{- else if eq "SPOTIFY" $key -}}
+								{{- $label = "Spotify" -}}
+								{{- $icon = "spotify" -}}
 
-						{{- else -}}
-							{{- $label = domainOnly $value -}}
+							{{- else if eq "SOUNDCLOUD" $key -}}
+								{{- $label = "SoundCloud" -}}
+								{{- $icon = "cloud" -}}
 
+							{{- else if eq "TIDAL" $key -}}
+								{{- $label = "Tidal" -}}
+
+							{{- else if eq "YOUTUBE" $key -}}
+								{{- $label = "YouTube Music" -}}
+								{{- $icon = "youtube" -}}
+
+							{{- else -}}
+								{{- $label = domainOnly $value -}}
+
+							{{- end -}}
+
+							<a href="{{$value}}" target="_blank">
+								<i class="bi bi-{{$icon}}"></i> {{ $label }}
+							</a><br>
 						{{- end -}}
 
-						<a href="{{$value}}" target="_blank">
-							<i class="bi bi-{{$icon}}"></i> {{ $label }}
-						</a><br>
 					{{- end -}}
-
+					<br>
 				{{- end -}}
+
+				{{- if ne nil $streamURL -}}
+					<a id="work-video" href="{{$streamURL}}" target="_blank" class="block ellipsis">
+						<i class="bi bi-camera-video-fill"></i> Music Video
+					</a><br>
+				{{- end -}}
+
 				<br>
-			{{- end -}}
+				{{- if ne nil (.Data "artist") -}}
+					<span id="work-artist">Artist: {{.Data "artist"}}</span><br>
+				{{- end -}}
 
+				{{- if ne nil (.Data "composer") -}}
+					<span id="work-composer">Composer: {{.Data "composer"}}</span><br>
+				{{- end -}}
 
-			{{- if ne nil $streamURL -}}
-				<a href="{{$streamURL}}" target="_blank" class="block ellipsis">
-					<i class="bi bi-camera-video-fill"></i> Music Video
-				</a><br>
-			{{- end -}}
+				{{- if ne nil (.Data "producer") -}}
+					<span id="work-producer">Producer: {{.Data "producer"}}</span><br>
+				{{- end -}}
 
-			<br>
-		
+				<br>
+				{{- if ne nil (.Data "isrc") -}}
+					<span id="work-isrc">ISRC: {{.Data "isrc"}}</span><br>
+				{{- end -}}
+
+			</div>
+
 		</div>
+
+		{{- if .UserCan "edit" -}}
+			<div class="pos-absolute-top-right text-xs">
+				<button hx-get="/{{.StreamID}}/edit">Edit Song</button>
+			</div>
+
+			<div hx-ext="sse" sse-connect="/{{.StreamID}}/sse">
+				<div
+					hx-get="/{{.StreamID}}"
+					hx-trigger="sse:{{.StreamID}}, refreshPage from:window"
+					hx-target="#main"
+					hx-swap="innerHTML"
+					hx-push-url="false">
+				</div>
+			</div>
+		{{- end -}}
 
 	</div>
 
-	{{- if .UserCan "edit" -}}
-		<div class="pos-absolute-top-right text-xs">
-			<div class="button-group">
-				<button hx-get="/@{{.AttributedTo.UserID.Hex}}/edit">Edit Profile</button>
-				<button hx-get="/{{.ParentID}}/edit">Edit Album</button>
-				<button hx-get="/{{.StreamID}}/edit">Edit Creation</button>
-			</div>
-			<button hx-get="/{{.ParentID}}/add-creation" class="primary"><span aria-label="Add">{{icon "add"}}</span> Another Image Link</button>
-		</div>
-	{{- end -}}
-	
-	<div hx-get="/{{.StreamID}}" hx-trigger="refreshPage from:window"></div>
 </div>
