--- a/blank-search-events/view-sidebar.html
+++ b/blank-search-events/view-sidebar.html
@@ -7,7 +7,7 @@
 <div class="flex-row md:flex-column">
 	<a href="/artists?q={{$query}}" hx-boost="true" class="search-navigation turboclick">Artists</a>
 	<a href="/albums?q={{$query}}" hx-boost="true" class="search-navigation turboclick">Albums</a>
-	<a href="/works?q={{$query}}" hx-boost="true" class="search-navigation turboclick">works</a>
+	<a href="/works?q={{$query}}" hx-boost="true" class="search-navigation turboclick">Works</a>
 	<a href="/events" hx-boost="true"class="search-navigation turboclick selected">Calendar</a>
 	<a href="/news/?q={{$query}}" hx-boost="true" class="search-navigation turboclick">News</a>
 </div>
