--- a/blankpage-search/view-results.html
+++ b/blankpage-search/view-results.html
@@ -11,15 +11,16 @@
     <div class="cols-4">
         {{- range $result := $results -}}
             <div class="card" style="overflow-x:hidden;">
-                <a href={{ $result.url }} ><img src={{ $result.iconUrl }} alt="">
-                    <span class="title">{{ $result.title }}</span>
-                    <span class="text">
-                        Favorites: {{ $result.favorites }}<br/>
-                        Date Created: {{ $result.dateCreated }}<br/>
-                        Tags: {{ $result.tags }}<br/>
-                        Category: {{- $result.category -}}<br/>
-                    </span>
-                </a>
+<!--                <a href="/{{.Token}}" ><img src="{{ $result.iconUrl }}" alt="">-->
+<!--                    <span class="title">{{ $result.title }}</span>-->
+<!--                    <span class="text">-->
+<!--                        Favorites: {{ $result.favorites }}<br/>-->
+<!--                        Date Created: {{ $result.dateCreated }}<br/>-->
+<!--                        Tags: {{ $result.tags }}<br/>-->
+<!--                        Category: {{- $result.category -}}<br/>-->
+<!--                    </span>-->
+<!--&lt;!&ndash;                </a>&ndash;&gt;-->
+                {{ $result.Data }}
             </div>
         {{- end -}}
     </div>
