--- a/blankpage-exhibit/exhibit.html
+++ b/blankpage-exhibit/exhibit.html
@@ -47,6 +47,7 @@
 		{{- end -}}
 	{{- end -}}
 
+	<!-- Header and Info Row -->
 	<div class="md:flex-row pos-relative padding">
 
 		{{- if $canEdit -}}
@@ -70,9 +71,9 @@
 		{{- end -}}
 
 
-		<div hx-get="/{{.StreamID}}/edit" role="button" class="md:width-50% lg:width-40% md:margin-right-lg flex-grow-0 flex-shrink-0 margin-bottom-lg rounded pos-relative">
+		<div hx-get="/{{.StreamID}}/edit" role="button" class="md:width-20% lg:width-20% md:margin-right-lg flex-grow-0 flex-shrink-0 margin-bottom-lg rounded pos-relative">
 			{{- if ne "" .IconURL -}}
-				<img id="exhibit-icon" src="{{.IconURL}}" class="width-40% rounded square" aria-hidden="true" style="view-transition-name: icon-{{.StreamID}}; object-fit:cover;">
+				<img id="exhibit-icon" src="{{.IconURL}}" class="width-100% rounded square" aria-hidden="true" style="view-transition-name: icon-{{.StreamID}};">
 			{{- else if $canEdit -}}
 				<div class="rounded width-100% square text-center flex-column flex-justify-center flex-align-center text-gray" style="border:solid 1px var(--black)" script="install blockselect()">
 					Click here to add exhibit art
@@ -80,8 +81,8 @@
 			{{- end -}}
 		</div>
 
-		<form class="flex-grow margin-bottom-lg">
-			<h1 id="exhibit-name" class="margin-vertical-none">
+		<form class="flex-grow lg:margin-rigth">
+			<h1 id="exhibit-name">
 				<span class="hide-visual">Exhibit Name:</span>
 				{{.Label}}
 			</h1>
@@ -125,25 +126,30 @@
 		</form>
 
 	</div>
-	<!-- Piece List -->
-	{{- if $creations.NotEmpty -}}
-	<div class="container-all">
-		{{- template "children" . -}}
+	<!-- Piece List Row -->
+	<div class="md:flex-row pos-relative padding">
 
+	{{- if $creations.NotEmpty -}}
+		<div class="container-all">
+			{{- template "children" . -}}
+
+
+		</div>
+
+		<div class="md:flex-row pos-relative padding"></div>
 		{{- if $canEdit -}}
-			<div hx-get="/{{.StreamID}}/add-creation" role="button" class="link flex-row">
-			<div class="margin-horizontal-xs flex-align-self-center link" style="font-size:50px" aria-hidden="true">{{icon "plus"}}</div>
-			<div class="flex-grow">
-				<div class="text-lg bold link nowrap">
-					Add Another Creation
+			<div hx-get="/{{.StreamID}}/add-creation" role="button" class="clickable flex-row">
+				<div class="margin-horizontal-xs flex-align-self-start link" style="font-size:50px" aria-hidden="true">{{icon "plus"}}</div>
+				<div class="flex-grow">
+					<div class="text-lg bold link nowrap">
+						Add Another Creation
+					</div>
 				</div>
 			</div>
-			</div>
 		{{- end -}}
-
-	</div>
-
 	{{- else if $canEdit -}}
+
+		<div class="md:flex-row  padding">
 			<div hx-get="/{{.StreamID}}/add-creation" role="button" class="clickable flex-row">
 				<div class="margin-horizontal-xs flex-align-self-center link" style="font-size:50px" aria-hidden="true">{{icon "art"}}</div>
 				<div class="flex-grow">
@@ -153,16 +159,18 @@
 					<div class="text-sm text-gray">You'll need to add at least one creation to this exhibit before you can publish it.</div>
 				</div>
 			</div>
-	</div>
+		</div>
 	{{- end -}}
+	</div>
+	<div class="md:flex-row pos-relative padding"></div>
 
 
 
 
-
+	<!-- Links and stuff Row -->
 	<div class="md:flex-row padding" style="background-color:rgba(0,0,0,0.08);">
 
-		<div class="md:width-50% lg:width-40% md:margin-right-lg flex-grow-0 flex-shrink-0 margin-bottom-lg">
+		<div class="md:width-50% lg:width-40% md:margin-right-lg flex-grow-0 flex-shrink-0 margin-bottom-sm">
 
 			{{- if ne "" .Summary -}}
 				<div id="exhibit-notes" class="margin-bottom-lg text-gray">
