--- a/blankpage-exhibit/children.html
+++ b/blankpage-exhibit/children.html
@@ -13,56 +13,26 @@
 <!--                <button onclick="linkDiscord()" hx-target="body" hx-swap="outerHTML">Link Discord ID</button>-->
 <!--            </span>-->
 
-<!--	{{- range $index, $result := $results -}}-->
-		<div class="container">
-<!--				<img src="{{.IconUrl}}" alt="">-->
-<!--				<span class="title"> {{$result.Label}} </span>-->
-<!--				<span class="text">-->
-<!--					Favorites: {{ $result.Data.favorites }}<br/>-->
-<!--					Date Created: {{ $result.Data.dateCreated }}<br/>-->
-<!--					Tags: {{ $result.Data.tags }}<br/>-->
-<!--					Category: {{ $result.Data.category }}<br/>-->
-<!--				</span>-->
-<!--			<button hx-get='/modals/deleteLink.html'-->
-<!--					hx-trigger='confirmed'-->
-<!--					onClick="confirmRemoval({{$result.StreamID}})" class="remove" aria-label="remove">-->
-<!--			</button>-->
-<!--		</div>-->
-<!--		<div streamId="{{.StreamID}}" class="item">-->
-<!--			<div-->
-<!--				hx-get="/{{.Token}}"-->
-<!--				hx-push-url="true"-->
-<!--				class="clickable card"-->
-<!--				style="overflow:hidden; aspect-ratio:1;">-->
-<!--				<img src="{{.ImageURL}}?height=300&amp;width=300" class="width-100%">-->
-<!--			</div>-->
-<!--		</div>-->
-
-<!--	{{- end -}}-->
 	{{- range $index, $result := $results -}}
-		<div streamId="{{.StreamID}}" class="item">
-			<div
-				hx-get="/{{.Token}}"
-				hx-push-url="true"
-				class="clickable card"
-				>
-			{{- if ne "" .IconURL -}}
-				<img src="{{.IconURL}}" class="width-50% rounded square">
-				{{- end -}}
+		<div class="container">
+			<span class="title"> {{$result.Data.title}} </span>
+			<span class="text">
+				Favorites: {{ $result.Data.favorites }}<br/>
+				Date Created: {{ $result.Data.dateCreated }}<br/>
+				Tags: {{ $result.Data.tags }}<br/>
+				Category: {{ $result.Data.category }}<br/>
+			</span>
+			<div streamId="{{.StreamID}}" class="item">
+				<div
+					hx-get="/{{.Token}}"
+					hx-push-url="true"
+					class="clickable card"
+					style="overflow:hidden; aspect-ratio:1;">
+					<img src="{{ .IconURL }}?width=150" class="width-100%">
+				</div>
 			</div>
 		</div>
 
 	{{- end -}}
 
-	{{- if $results.IsLength 6 -}}
-
-		<div
-			hx-get="/{{.Token}}/children?publishDate=lt:{{$results.Last.PublishDate}}"
-			hx-push-url="false"
-			hx-trigger="revealed"
-			hx-target="#children"
-			hx-swap="beforeend"></div>
-
-	{{- end -}}
 {{- end -}}
-		</div>
