--- a/blankpage-exhibit/exhibit.html
+++ b/blankpage-exhibit/exhibit.html
@@ -11,7 +11,7 @@
 {{- end -}}
 {{- $checkoutLabel := first (.Data "checkout label") "Buy Now" -}}
 
-<div id="exhibit-{{.StreamID}}" class="page padding-none">
+<div id="exhibit-{{.StreamID}}" class="page padding-none margin-none">
 
 	<link rel="stylesheet" type="text/css" href="/{{.StreamID}}/stylesheet?v={{.ETag}}"/>
 
@@ -52,7 +52,7 @@
 
 		{{- if $canEdit -}}
 			<div class="pos-absolute-top-right text-sm">
-
+				<button hx-get="/{{.StreamID}}/add-creation">{{icon "plus"}}Add Creation</button>
 				<button hx-get="/{{.StreamID}}/edit">Edit Exhibit</button>
 				<button hx-get="/{{.StreamID}}/edit-checkout">
 					{{- if .StreamHasPrivileges -}}
@@ -71,9 +71,9 @@
 		{{- end -}}
 
 
-		<div hx-get="/{{.StreamID}}/edit" role="button" class="md:width-20% lg:width-20% md:margin-right-lg flex-grow-0 flex-shrink-0 margin-bottom-lg rounded pos-relative">
+		<div hx-get="/{{.StreamID}}/edit" role="button" class="md:width-10% lg:width-20% md:margin-right-md flex-grow-0 flex-shrink-0 margin-bottom-md rounded pos-relative">
 			{{- if ne "" .IconURL -}}
-				<img id="exhibit-icon" src="{{.IconURL}}" class="width-100% rounded square" aria-hidden="true" style="view-transition-name: icon-{{.StreamID}};">
+				<img id="exhibit-icon" src="{{ .IconURL }}" class="width-100% rounded square" aria-hidden="true" style="view-transition-name: icon-{{.StreamID}};">
 			{{- else if $canEdit -}}
 				<div class="rounded width-100% square text-center flex-column flex-justify-center flex-align-center text-gray" style="border:solid 1px var(--black)" script="install blockselect()">
 					Click here to add exhibit art
@@ -82,11 +82,11 @@
 		</div>
 
 		<form class="flex-grow lg:margin-rigth">
-			<h1 id="exhibit-name">
+			<h2 id="exhibit-name">
 				<span class="hide-visual">Exhibit Name:</span>
 				{{.Label}}
-			</h1>
-			<div class="text-lg margin-top-none">
+			</h2>
+			<div class="text-sm margin-top-none">
 				<a href="/@{{.ParentID}}" hx-boost="true" hx-swap="transition:true" id="exhibit-attributedTo" aria-label="Artist: {{.AttributedTo.Name}}">
 					{{.AttributedTo.Name}}
 				</a>
@@ -128,166 +128,138 @@
 	</div>
 	<!-- Piece List Row -->
 	<div class="md:flex-row pos-relative padding">
-
-	{{- if $creations.NotEmpty -}}
-		<div class="container-all">
-			{{- template "children" . -}}
-
-
+		<div id="exhibit-notes" class="md:width-20% lg:width-20% md:margin-right-md flex-grow-0 flex-shrink-0 margin-bottom-md rounded pos-relative" tabindex="0">
+		{{- if ne "" .Summary -}}
+			<h3>Exhibit Notes</h3>
+			{{.Summary | markdown}}
+		{{- else -}}
+			<h3>Exhibit Notes</h3>
+			No description given.
+		{{- end -}}
 		</div>
+		{{- if $creations.NotEmpty -}}
+			<div id="children" class="flex-grow-1 flex-shrink-1 lg:margin-right columns-3">
+				{{- template "children" . -}}
+			</div>
 
-		<div class="md:flex-row pos-relative padding"></div>
-		{{- if $canEdit -}}
-			<div hx-get="/{{.StreamID}}/add-creation" role="button" class="clickable flex-row">
-				<div class="margin-horizontal-xs flex-align-self-start link" style="font-size:50px" aria-hidden="true">{{icon "plus"}}</div>
-				<div class="flex-grow">
-					<div class="text-lg bold link nowrap">
-						Add Another Creation
+		{{- else if $canEdit -}}
+
+			<div class="md:flex-row  padding">
+				<div hx-get="/{{.StreamID}}/add-creation" role="button" class="clickable flex-row">
+					<div class="margin-horizontal-xs flex-align-self-center link" style="font-size:50px" aria-hidden="true">{{icon "art"}}</div>
+					<div class="flex-grow">
+						<div class="text-lg bold link nowrap">
+							Add the first creation to this exhibit
+						</div>
+						<div class="text-sm text-gray">You'll need to add at least one creation to this exhibit before you can publish it.</div>
 					</div>
 				</div>
 			</div>
 		{{- end -}}
-	{{- else if $canEdit -}}
 
-		<div class="md:flex-row  padding">
-			<div hx-get="/{{.StreamID}}/add-creation" role="button" class="clickable flex-row">
-				<div class="margin-horizontal-xs flex-align-self-center link" style="font-size:50px" aria-hidden="true">{{icon "art"}}</div>
-				<div class="flex-grow">
-					<div class="text-lg bold link nowrap">
-						Add the first creation to this exhibit
-					</div>
-					<div class="text-sm text-gray">You'll need to add at least one creation to this exhibit before you can publish it.</div>
-				</div>
-			</div>
-		</div>
-	{{- end -}}
 	</div>
-	<div class="md:flex-row pos-relative padding"></div>
-
-
-
 
 	<!-- Links and stuff Row -->
-	<div class="md:flex-row padding" style="background-color:rgba(0,0,0,0.08);">
-
-		<div class="md:width-50% lg:width-40% md:margin-right-lg flex-grow-0 flex-shrink-0 margin-bottom-sm">
-
-			{{- if ne "" .Summary -}}
-				<div id="exhibit-notes" class="margin-bottom-lg text-gray">
-					<h3>Exhibit Notes</h3>
-					{{.Summary | markdown}}
-				</div>
-			{{- end -}}
-
-		</div>
-
-		<div class="md:width-30% flex-grow-0 flex-shrink-0 margin-bottom-lg">
-
-			{{- if $tags.NotEmpty -}}
-				<h3>Hashtags</h3>
-				<div id="exhibit-tags" class="text-sm margin-bottom">
-					{{- range $index, $tag := $tags -}}
-						{{- if eq "Hashtag" $tag.Type}}
-							<a href="/exhibits?q=%23{{$tag.Name}}" hx-boost="true" class="tag margin-bottom-sm" aria-label="Hashtag: {{$tag.Name}}">#{{$tag.Name}}</a>
-						{{- end -}}
+		{{- if $tags.NotEmpty -}}
+			<h3>Exhibit Tags</h3>
+			<div id="exhibit-tags" class="text-sm margin-bottom-lg">
+				{{- range $index, $tag := $tags -}}
+					{{- if eq "Hashtag" $tag.Type}}
+						<a href="/exhibits?q=%23{{$tag.Name}}" hx-boost="true" class="tag margin-bottom-sm" aria-label="Hashtag: {{$tag.Name}}">#{{$tag.Name}}</a>
 					{{- end -}}
-				</div>
-			{{- end -}}
+				{{- end -}}
+			</div>
+		{{- else -}}
+		<div id="exhibit-tags-empty" class="text-sm margin-bottom-lg"></div>
+		{{- end -}}
 
-			{{- if $links.NotEmpty -}}
-				<div id="children" class="margin-bottom-lg">
-					<h3>Also On These Sites:</h3>
-					{{- range $key, $value := $links -}}
-						
-						{{- if ne "" $value -}}
-							{{- $icon := "music-note-beamed" -}}
-							{{- $label := $value -}}
+		{{- if $links.NotEmpty -}}
+			<div id="links" class="text-sm margin-bottom-lg">
+				<h3>Also On These Sites:</h3>
+				{{- range $key, $value := $links -}}
 
-							{{- if eq "AMAZON" $key -}}
-								{{- $label = "Amazon Music" -}}
-								{{- $icon = "amazon" -}}
+					{{- if ne "" $value -}}
+						{{- $icon := "music-note-beamed" -}}
+						{{- $label := $value -}}
 
-							{{- else if eq "APPLE" $key -}}
-								{{- $icon = "apple" -}}
-								{{- $label = "Apple Music" -}}
+						{{- if eq "AMAZON" $key -}}
+							{{- $label = "Amazon Music" -}}
+							{{- $icon = "amazon" -}}
 
-							{{- else if eq "BANDCAMP" $key -}}
-								{{- $label = "Bandcamp" -}}
+						{{- else if eq "APPLE" $key -}}
+							{{- $icon = "apple" -}}
+							{{- $label = "Apple Music" -}}
 
-							{{- else if eq "GOOGLE" $key -}}
-								{{- $label = "Google Play" -}}
-								{{- $icon = "google" -}}
+						{{- else if eq "BANDCAMP" $key -}}
+							{{- $label = "Bandcamp" -}}
 
-							{{- else if eq "IHEARTRADIO" $key -}}
-								{{- $label = "iHeartRadio" -}}
+						{{- else if eq "GOOGLE" $key -}}
+							{{- $label = "Google Play" -}}
+							{{- $icon = "google" -}}
 
-							{{- else if eq "PANDORA" $key -}}
-								{{- $label = "Pandora" -}}
+						{{- else if eq "IHEARTRADIO" $key -}}
+							{{- $label = "iHeartRadio" -}}
 
-							{{- else if eq "SOUNDCLOUD" $key -}}
-								{{- $label = "SoundCloud" -}}
-								{{- $icon = "cloud" -}}
+						{{- else if eq "PANDORA" $key -}}
+							{{- $label = "Pandora" -}}
 
-							{{- else if eq "SPOTIFY" $key -}}
-								{{- $label = "Spotify" -}}
-								{{- $icon = "spotify" -}}
+						{{- else if eq "SOUNDCLOUD" $key -}}
+							{{- $label = "SoundCloud" -}}
+							{{- $icon = "cloud" -}}
 
-							{{- else if eq "TIDAL" $key -}}
-								{{- $label = "Tidal" -}}
+						{{- else if eq "SPOTIFY" $key -}}
+							{{- $label = "Spotify" -}}
+							{{- $icon = "spotify" -}}
 
-							{{- else if eq "YOUTUBE" $key -}}
-								{{- $label = "YouTube Music" -}}
-								{{- $icon = "youtube" -}}
+						{{- else if eq "TIDAL" $key -}}
+							{{- $label = "Tidal" -}}
 
-							{{- else -}}
-								{{- $label = domainOnly $value -}}
+						{{- else if eq "YOUTUBE" $key -}}
+							{{- $label = "YouTube Music" -}}
+							{{- $icon = "youtube" -}}
 
-							{{- end -}}
+						{{- else -}}
+							{{- $label = domainOnly $value -}}
 
-							<a href="{{$value}}" class="block ellipsis" target="_blank">
-								<i class="bi bi-{{$icon}}"></i> {{ $label }}
-							</a>
 						{{- end -}}
 
+						<a href="{{$value}}" class="block ellipsis" target="_blank">
+							<i class="bi bi-{{$icon}}"></i> {{ $label }}
+						</a>
 					{{- end -}}
-					</div>
+
+				{{- end -}}
+				</div>
 			{{- end -}}
 
 			{{- $uploads := .AttachmentsByCategory "other" -}}
-			{{- if or $uploads.NotEmpty $canEdit -}}
-				<div id="exhibit-attachments" class="margin-bottom-lg">
-					<div class="flex-row">
-						<h3 class="flex-grow margin-none">Other Files</h3>
-					</div>
+<!--			{{- if or $uploads.NotEmpty $canEdit -}}-->
+<!--				<div id="exhibit-attachments" class="margin-bottom-lg">-->
+<!--					<div class="flex-row">-->
+<!--						<h3 class="flex-grow margin-none">Other Files</h3>-->
+<!--					</div>-->
 
-					{{- if $canEdit -}}
-						<div class="margin-bottom-sm">
-							<div class="text-gray">Attachments like <b class="nowrap">liner notes</b> or <b class="nowrap">exhibit art</b> that anyone can access.</div>
-							<span hx-get="/{{$streamID}}/upload" class="link" role="button" aria-label="Attach a File">{{icon "upload"}} Attach a File</span>
-						</div>
-					{{- end -}}
+<!--					{{- if $uploads.NotEmpty -}}-->
+<!--						<div class="table margin-top-lg">-->
+<!--							{{- range $index, $upload := $uploads -}}-->
+<!--								<div class="flex-row padding-vertical-sm">-->
+<!--									<div class="flex-grow">-->
+<!--										<a href="/{{$streamID}}/attachments/{{.AttachmentID.Hex}}" target="_blank" class="ellipsis">{{.Label}}</a><br>-->
+<!--										<span class="text-sm text-gray">{{.Description}}</span>-->
+<!--									</div>-->
+<!--									{{- if $canEdit -}}-->
+<!--										<div>-->
+<!--											<button hx-get="/{{$streamID}}/edit-upload?attachmentId={{.AttachmentID.Hex}}" title="Edit Attachment" aria-label="Edit Attachment" class="text-xs margin-left-sm">{{icon "more-horizontal"}}</button>-->
+<!--										</div>-->
+<!--									{{- end -}}-->
+<!--								</div>-->
+<!--							{{- end -}}-->
+<!--						</div>-->
+<!--					{{- end -}}-->
+<!--				</div>-->
+<!--			{{- end -}}-->
 
-					{{- if $uploads.NotEmpty -}}
-						<div class="table margin-top-lg">
-							{{- range $index, $upload := $uploads -}}
-								<div class="flex-row padding-vertical-sm">
-									<div class="flex-grow">
-										<a href="/{{$streamID}}/attachments/{{.AttachmentID.Hex}}" target="_blank" class="ellipsis">{{.Label}}</a><br>
-										<span class="text-sm text-gray">{{.Description}}</span>
-									</div>
-									{{- if $canEdit -}}
-										<div>
-											<button hx-get="/{{$streamID}}/edit-upload?attachmentId={{.AttachmentID.Hex}}" title="Edit Attachment" aria-label="Edit Attachment" class="text-xs margin-left-sm">{{icon "more-horizontal"}}</button>
-										</div>
-									{{- end -}}
-								</div>
-							{{- end -}}
-						</div>
-					{{- end -}}
-				</div>
-			{{- end -}}
-
-			<div id="exhibit-license" class="margin-bottom-lg">
+			<div id="exhibit-license" class="text-smmargin-bottom-lg">
 				{{- $license := .DataString "license"}}
 				{{- if eq "COPYRIGHT" $license -}}
 					<h3 class="margin-none">License</h3>
@@ -316,49 +288,47 @@
 				{{- end -}}
 			</div>
 
-		</div>
 
-		{{- if $creations.NotEmpty -}}
-			<script src="/.templates/blankpage-exhibit/javascript" preload></script>
-<!--				<script id="playlist" type="application/javascript" data-json='[-->
-<!--					{{- $first := true -}}-->
-<!--					{{- range $index, $creation := $creations -}}-->
-<!--						{{- if ne nil $creation.Data.attachmentId -}}-->
-<!--							{{- if not $first -}},{{- end -}}-->
-<!--							{{- $first = false -}}-->
-<!--							{"url":"/{{$creation.StreamID}}/attachments/{{$creation.Data.attachmentId}}", "title":{{$creation.Label | json}} }-->
-<!--						{{ end -}}-->
-<!--					{{- end -}}-->
-<!--					]'>-->
-<!--					var playlist = JSON.parse(document.getElementById('playlist').dataset.json);-->
-			{{- if $canEdit -}}
+<!--		{{- if $creations.NotEmpty -}}-->
+<!--&lt;!&ndash;			<script src="/.templates/blankpage-exhibit/javascript" preload></script>&ndash;&gt;-->
+<!--&lt;!&ndash;				<script id="playlist" type="application/javascript" data-json='[&ndash;&gt;-->
+<!--&lt;!&ndash;					{{- $first := true -}}&ndash;&gt;-->
+<!--&lt;!&ndash;					{{- range $index, $creation := $creations -}}&ndash;&gt;-->
+<!--&lt;!&ndash;						{{- if ne nil $creation.Data.attachmentId -}}&ndash;&gt;-->
+<!--&lt;!&ndash;							{{- if not $first -}},{{- end -}}&ndash;&gt;-->
+<!--&lt;!&ndash;							{{- $first = false -}}&ndash;&gt;-->
+<!--&lt;!&ndash;							{"url":"/{{$creation.StreamID}}/attachments/{{$creation.Data.attachmentId}}", "title":{{$creation.Label | json}} }&ndash;&gt;-->
+<!--&lt;!&ndash;						{{ end -}}&ndash;&gt;-->
+<!--&lt;!&ndash;					{{- end -}}&ndash;&gt;-->
+<!--&lt;!&ndash;					]'>&ndash;&gt;-->
+<!--&lt;!&ndash;					var playlist = JSON.parse(document.getElementById('playlist').dataset.json);&ndash;&gt;-->
+<!--			{{- if $canEdit -}}-->
 
-				<script src="/.themes/global/resources/sortable-1.15.0/Sortable.min.js" preload></script>
+<!--				<script src="/.themes/global/resources/sortable-1.15.0/Sortable.min.js" preload></script>-->
 
-				<script>
-					new Sortable(document.getElementById("exhibit-works"), {
-						handle: ".drag-handle",
-						animation: 150,
-						whisperClass: 'draggable-whisper'
-					});
-				</script>
+<!--				<script>-->
+<!--					new Sortable(document.getElementById("exhibit-works"), {-->
+<!--						handle: ".drag-handle",-->
+<!--						animation: 150,-->
+<!--						whisperClass: 'draggable-whisper'-->
+<!--					});-->
+<!--				</script>-->
 
-				<style>
-					.drag-handle {
-						cursor:grab;
-					}
+<!--				<style>-->
+<!--					.drag-handle {-->
+<!--						cursor:grab;-->
+<!--					}-->
 
-					.draggable-whisper {
-						background-color: var(--gray50);
-						color:var(--gray50);
-						cursor: grabbing;
-					}
-				</style>
-			{{- end -}}
+<!--					.draggable-whisper {-->
+<!--						background-color: var(&#45;&#45;gray50);-->
+<!--						color:var(&#45;&#45;gray50);-->
+<!--						cursor: grabbing;-->
+<!--					}-->
+<!--				</style>-->
+<!--			{{- end -}}-->
 
-		{{- end -}}
+<!--		{{- end -}}-->
 
-	</div>
 
 	{{- if $canEdit -}}
 
